--- a/movie-catalog/package.json
+++ b/movie-catalog/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.7",
+    "@headlessui/react": "^1.7.11",
+    "@heroicons/react": "^2.0.15",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
