--- a/movie-catalog/package.json
+++ b/movie-catalog/package.json
@@ -6,16 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "compile": "graphql-codegen --config codegen.ts",
-    "watch": "graphql-codegen -w",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@apollo/client": "^3.7.7",
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.15",
-    "@mui/material": "^5.11.10",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,9 +19,6 @@
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^3.0.0",
-    "@graphql-codegen/client-preset": "^2.0.0",
-    "@graphql-codegen/typescript-resolvers": "^3.0.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
